<resources>
    <string name="app_name">Pew Pow</string>
    <string name="lessons">Lessons</string>
    <string name="example">type something &#8230;</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="grammar">Grammar</string>

    <string name="words">Words</string>
    <string name="kanji">Kanji</string>
    <string name="mean">Mean</string>
    <string name="x">X</string>
    <string name="o">O</string>
</resources>
