<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kienvanba.pewpow.MainActivity">
    <FrameLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/head_bar_height"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="@color/app_background"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
    </FrameLayout>
    <EditText
        android:id="@+id/et"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_space"
        android:hint="@string/example"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/common_space">
        <Button
            android:id="@+id/btn_words"
            android:layout_width="@dimen/main_option_btn_w"
            android:layout_height="@dimen/main_option_btn_h"
            android:background="@drawable/main_option_btn_bg"
            android:text="@string/vocabulary"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"/>
        <Button
            android:id="@+id/btn_grammar"
            android:layout_width="@dimen/main_option_btn_w"
            android:layout_height="@dimen/main_option_btn_h"
            android:background="@drawable/main_option_btn_bg"
            android:text="@string/grammar"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>
</RelativeLayout>
