<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background">
        <FrameLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="@dimen/head_bar_height"
            android:background="@color/colorPrimary">
            <TextView
                android:id="@+id/header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/app_background"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="@dimen/common_space"
            android:paddingRight="@dimen/common_space">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="@dimen/common_space"
                android:weightSum="1">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/words"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:background="@drawable/border_right_bg"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:text="@string/kanji"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:background="@drawable/border_right_bg"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="@string/mean"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:background="@drawable/border_right_bg"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/o"
                    android:textColor="@color/green"
                    android:gravity="center"
                    android:background="@drawable/border_right_bg"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.1"
                    android:text="@string/x"
                    android:gravity="center"
                    android:textColor="@color/colorAccent"/>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/vocabulary_rv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/vocabulary_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="@dimen/common_space"
        android:layout_marginEnd="@dimen/common_space"
        android:layout_marginRight="@dimen/common_space"
        android:src="@drawable/ic_list"
        app:fabSize="normal"/>
</android.support.design.widget.CoordinatorLayout>